--- a/RTE/test-output/old/RTE Job Smoke/toc.html
+++ b/RTE/test-output/old/RTE Job Smoke/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>RTE Job Smoke</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>6 tests</td>
-<td><a target='mainFrame' href='classes.html'>6 classes</a></td>
-<td>6 methods:<br/>
+<td>7 tests</td>
+<td><a target='mainFrame' href='classes.html'>7 classes</a></td>
+<td>7 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -24,6 +24,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>RTE Crud Operation (0/1/0)</td><td valign='top' align='right'>
   <a href='RTE Crud Operation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>RTE Get PickUPID and Search (1/0/0)</td><td valign='top' align='right'>
+  <a href='RTE Get PickUPID and Search.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
